# metaprogramming

./: CMakeLists.txt
includes/common/: tools.hpp
includes/common/tools/: unused.hpp
includes/partial_specialisation/: selector.hpp  super_sup.hpp
includes/strategy/: check.hpp  create.hpp
sources/: class_provide_strategy.cpp  compile_time_check.cpp  main.cpp  parical_specialisation.cpp  partial_specialisation.cpp
