cmake_minimum_required(VERSION 2.8)

PROJECT(metaprogramming)

SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wpedantic -march='native' -Wnarrowing -std=c++14")# -march='nehalem'

SET(INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/includes")
SET(SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/sources")
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/bin")

FILE(GLOB_RECURSE LIST_OF_USING_FILES
    "${INCLUDE_DIR}/*.hpp"
    "${SOURCE_DIR}/*.cpp"
    )


INCLUDE_DIRECTORIES(${PROJECT_NAME} ${INCLUDE_DIR})

ADD_EXECUTABLE(${PROJECT_NAME} ${LIST_OF_USING_FILES})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC -lgtest -lgtest_main -lpthread)

#message("SOURCE_DIR = ${SOURCE_DIR}")
